[tool.poetry]
name = "grasskeeper"
version = "0.1.0"
description = "Monitor grass on Github."
authors = ["Nishi Yuki <nishiyk256@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
invoke = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
